--- a/app/src/main/res/layout/actionbar_header_nav.xml
+++ b/app/src/main/res/layout/actionbar_header_nav.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/headerNameTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
+                android:text="@string/app_name2"
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 android:textStyle="bold"
