--- a/app/src/main/res/layout/activity_sing_in.xml
+++ b/app/src/main/res/layout/activity_sing_in.xml
@@ -42,6 +42,14 @@
             android:layout_marginTop="20dp"
             android:orientation="vertical"
             android:padding="30dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/loginName"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20dp"
+                android:layout_gravity="center"
+                android:gravity="center"></TextView>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
