--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#FF6E40</color>
-    <color name="colorPrimaryDark">#FF6E40</color>
+    <color name="colorPrimary">#058B8C</color>
+    <color name="colorPrimaryDark">#058B8C</color>
+    <color name="red">#BA0808</color>
 </resources>
